--- a/www/splash.html
+++ b/www/splash.html
@@ -18,13 +18,13 @@
 </svg>
     </div>
     
-    <div class="version" >Ver 0.0</div>
+    <div class="version" >Ver 1.0.1</div>
   </div>
 
   <script>
     // بعد از انیمیشن، کاربر را به صفحه بعد هدایت کن
     setTimeout(() => {
-      window.location.href = "home.html"; // اینو بگذار به صفحه بعدت
+      window.location.href = "start.html"; // اینو بگذار به صفحه بعدت
     }, 4000); // زمان کل ۴ ثانیه
   </script>
   <script>
