--- a/www/wellcom.html
+++ b/www/wellcom.html
@@ -284,7 +284,7 @@ window.addEventListener('load', () => {
     setTimeout(() => {
         document.body.classList.add('fade-out'); // افکت محو شدن
         setTimeout(() => {
-            window.location.href = 'home.html'; // مسیر صفحه Skip رو بذار
+            window.location.href = 'one.html'; // مسیر صفحه Skip رو بذار
         }, 500); // کمی عقب‌تر برای اجرای افکت
     }, 4000);
 });
