--- a/www/wellcom.html
+++ b/www/wellcom.html
@@ -13,7 +13,7 @@
 
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            background: linear-gradient(135deg, #6366F1 0%);
+            background: #6366F1;
             min-height: 100vh;
             overflow: hidden;
             position: relative;
@@ -284,7 +284,7 @@ window.addEventListener('load', () => {
     setTimeout(() => {
         document.body.classList.add('fade-out'); // افکت محو شدن
         setTimeout(() => {
-            window.location.href = 'one.html'; // مسیر صفحه Skip رو بذار
+            window.location.href = 'home.html'; // مسیر صفحه Skip رو بذار
         }, 500); // کمی عقب‌تر برای اجرای افکت
     }, 4000);
 });
