Add OTP verification page and fix backspace auto-focus logic

--- a/www/search.html
+++ b/www/search.html
@@ -245,7 +245,7 @@ font-weight: 400;
 
     .tab {
       flex-shrink: 0;
-      font-family: 'Bonyade Koodak VF', sans-serif;
+      font-family: 'Bonyade Koodak VF';
       font-weight: 400;
 
       background: transparent;
